// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`left-menu index all state matches snapshot 1`] = `
<div
  class="root js-left-menu-root"
>
  <header
    class="header"
  >
    <section
      class="header-minibar layout-minibar"
    >
      <svg
        class="logo-gitter-sign"
        version="1.1"
        viewBox="0 0 18 25"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          height="10"
          width="2"
          x="15"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="10"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="5"
          y="5"
        />
         
        <rect
          height="15"
          width="2"
        />
      </svg>
    </section>
     
    <section
      class="header-main-menu layout-main-menu"
    >
      <span
        class="logo-text"
      />
    </section>
  </header>
   
  <section
    class="body"
  >
    <section
      class="layout-minibar"
    >
      <menu-bar-body-stub />
    </section>
     
    <section
      class="body-main-menu layout-main-menu"
    >
      <div
        class="hide"
      >
        
        initialTestValue
      
      </div>
       
      <h2
        class="room-list-title"
      >
        All conversations
      </h2>
       
      <!---->
       
      <ul
        class="room-list"
      />
    </section>
  </section>
</div>
`;

exports[`left-menu index all state matches snapshot with some rooms 1`] = `
<div
  class="root js-left-menu-root"
>
  <header
    class="header"
  >
    <section
      class="header-minibar layout-minibar"
    >
      <svg
        class="logo-gitter-sign"
        version="1.1"
        viewBox="0 0 18 25"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          height="10"
          width="2"
          x="15"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="10"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="5"
          y="5"
        />
         
        <rect
          height="15"
          width="2"
        />
      </svg>
    </section>
     
    <section
      class="header-main-menu layout-main-menu"
    >
      <span
        class="logo-text"
      />
    </section>
  </header>
   
  <section
    class="body"
  >
    <section
      class="layout-minibar"
    >
      <menu-bar-body-stub />
    </section>
     
    <section
      class="body-main-menu layout-main-menu"
    >
      <div
        class="hide"
      >
        
        initialTestValue
      
      </div>
       
      <h2
        class="room-list-title"
      >
        All conversations
      </h2>
       
      <!---->
       
      <ul
        class="room-list"
      >
        <list-item-stub
          item="[object Object]"
          type="all"
        />
        <list-item-stub
          item="[object Object]"
          type="all"
        />
        <list-item-stub
          item="[object Object]"
          type="all"
        />
      </ul>
    </section>
  </section>
</div>
`;

exports[`left-menu index people state matches snapshot 1`] = `
<div
  class="root js-left-menu-root"
>
  <header
    class="header"
  >
    <section
      class="header-minibar layout-minibar"
    >
      <svg
        class="logo-gitter-sign"
        version="1.1"
        viewBox="0 0 18 25"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          height="10"
          width="2"
          x="15"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="10"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="5"
          y="5"
        />
         
        <rect
          height="15"
          width="2"
        />
      </svg>
    </section>
     
    <section
      class="header-main-menu layout-main-menu"
    >
      <span
        class="logo-text"
      />
    </section>
  </header>
   
  <section
    class="body"
  >
    <section
      class="layout-minibar"
    >
      <menu-bar-body-stub />
    </section>
     
    <section
      class="body-main-menu layout-main-menu"
    >
      <div
        class="hide"
      >
        
        initialTestValue
      
      </div>
       
      <!---->
       
      <h2
        class="room-list-title"
      >
        People
      </h2>
       
      <ul
        class="room-list"
      />
    </section>
  </section>
</div>
`;

exports[`left-menu index pinning and expanding not pinned and collapse 1`] = `
<div
  class="root js-left-menu-root unpinned"
>
  <header
    class="header"
  >
    <section
      class="header-minibar layout-minibar"
    >
      <svg
        class="logo-gitter-sign"
        version="1.1"
        viewBox="0 0 18 25"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          height="10"
          width="2"
          x="15"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="10"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="5"
          y="5"
        />
         
        <rect
          height="15"
          width="2"
        />
      </svg>
    </section>
     
    <section
      class="header-main-menu layout-main-menu"
    >
      <span
        class="logo-text"
      />
    </section>
  </header>
   
  <section
    class="body"
  >
    <section
      class="layout-minibar"
    >
      <menu-bar-body-stub />
    </section>
     
    <section
      class="body-main-menu layout-main-menu"
    >
      <div
        class="hide"
      >
        
        initialTestValue
      
      </div>
       
      <h2
        class="room-list-title"
      >
        All conversations
      </h2>
       
      <!---->
       
      <ul
        class="room-list"
      />
    </section>
  </section>
</div>
`;

exports[`left-menu index pinning and expanding not pinned and expanded 1`] = `
<div
  class="root js-left-menu-root unpinned expanded"
>
  <header
    class="header"
  >
    <section
      class="header-minibar layout-minibar"
    >
      <svg
        class="logo-gitter-sign"
        version="1.1"
        viewBox="0 0 18 25"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          height="10"
          width="2"
          x="15"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="10"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="5"
          y="5"
        />
         
        <rect
          height="15"
          width="2"
        />
      </svg>
    </section>
     
    <section
      class="header-main-menu layout-main-menu"
    >
      <span
        class="logo-text"
      />
    </section>
  </header>
   
  <section
    class="body"
  >
    <section
      class="layout-minibar"
    >
      <menu-bar-body-stub />
    </section>
     
    <section
      class="body-main-menu layout-main-menu"
    >
      <div
        class="hide"
      >
        
        initialTestValue
      
      </div>
       
      <h2
        class="room-list-title"
      >
        All conversations
      </h2>
       
      <!---->
       
      <ul
        class="room-list"
      />
    </section>
  </section>
</div>
`;

exports[`left-menu index search state matches snapshot 1`] = `
<div
  class="root js-left-menu-root"
>
  <header
    class="header"
  >
    <section
      class="header-minibar layout-minibar"
    >
      <svg
        class="logo-gitter-sign"
        version="1.1"
        viewBox="0 0 18 25"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          height="10"
          width="2"
          x="15"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="10"
          y="5"
        />
         
        <rect
          height="20"
          width="2"
          x="5"
          y="5"
        />
         
        <rect
          height="15"
          width="2"
        />
      </svg>
    </section>
     
    <section
      class="header-main-menu layout-main-menu"
    >
      <span
        class="logo-text"
      />
    </section>
  </header>
   
  <section
    class="body"
  >
    <section
      class="layout-minibar"
    >
      <menu-bar-body-stub />
    </section>
     
    <section
      class="body-main-menu layout-main-menu"
    >
      <div
        class="hide"
      >
        
        initialTestValue
      
      </div>
       
      <search-body-stub />
    </section>
  </section>
</div>
`;
